# waver

./: .gitignore  Dockerfile  README.md  autostart.sh  config.sh
catkin_ws/devel/lib/pkgconfig/: waver_description.pc
catkin_ws/devel/share/waver_description/cmake/: waver_descriptionConfig.cmake
catkin_ws/src/waver_description/: CMakeLists.txt
pt_controller/: CMakeLists.txt  package.xml
pt_controller/include/pt_controller/: PathTrackingController.h  PathTrackingPlanner.h
pt_controller/launch/: pt_controller_example.launch
pt_controller/src/: PathTrackingController.cpp  PathTrackingNode.cpp  PathTrackingPlanner.cpp
pt_controller/test/: test_path_tracking_controller.cpp  test_path_tracking_planner.cpp
scripts/: bash.sh  build.sh  compilate.sh  run.sh  run_cpu.sh  run_docker.sh  run_nvidia.sh
src/waver_description/: package.xml
src/waver_description/urdf/: lidar.xacro  util.xacro  waver.trans.xacro  waver.xacro
src/waver_gazebo/launch/: gazebo.launch
src/waver_gazebo/world/: house.world
src/waver_nav/: CMakeLists.txt
src/waver_nav/launch/: amcl.launch  gmapping.launch  map_server.launch  move_base.launch  waver_nav.launch
src/waver_nav/maps/: coworking_map.pgm  coworking_map.yaml
src/waver_nav/param/: amcl.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  global_planner_base.yaml  gmapping.yaml  local_planner_base.yaml  local_planner_dwa.yaml  local_planner_teb.yaml  move_base.yaml
src/waver_nav/rviz/: waver.rviz
src/waver_viz/rviz/: waver.rviz
waver_description/: CMakeLists.txt  README.md  package.xml
waver_description/launch/: description.launch
waver_description/urdf/: imu.xacro  util.xacro  waver.gazebo.xacro  waver.xacro
waver_gazebo/: CMakeLists.txt  README.md  package.xml
waver_gazebo/launch/: gazebo.launch
waver_gazebo/world/: coworking.world
waver_nav/: CMakeLists.txt  package.xml
waver_nav/launch/: amcl.launch  gmapping.launch  map_server.launch  move_base.launch  waver_nav.launch
waver_nav/maps/: empty_map.yaml
waver_nav/param/: costmap_local.yaml  local_planner_teb.yaml
waver_nav/rviz/: waver.rviz
waver_sim_utils/: CMakeLists.txt  package.xml
waver_sim_utils/data/: wps.csv
waver_sim_utils/launch/: pt_controller.launch  pt_controller_gazebo.launch  pt_controller_sin.launch  pt_controller_sin_gazebo.launch  waver_gazebo_rviz.launch
waver_sim_utils/scripts/: gps_path  gps_path_sin  waypoints_publisher
waver_viz/: CMakeLists.txt  README.md  package.xml
waver_viz/launch/: rviz.launch
waver_viz/rviz/: waver.rviz
waver_ws/src/waver_description/: CMakeLists.txt
waver_ws/src/waver_description/config/: diff_drive.yaml  waver_control.yaml
waver_ws/src/waver_description/launch/: controller.launch  display.launch  display_test.launch  gazebo.launch
waver_ws/src/waver_description/param/: controller.yaml
waver_ws/src/waver_description/rviz/: waver.rviz  waver_test.rviz
waver_ws/src/waver_description/urdf/: inertial_wheel.xacro  materials.xacro  util.xacro  waver.gazebo.xacro  waver.trans.xacro  waver.urdf  waver.xacro  wheel.xacro
waver_ws/src/waver_gazebo/launch/: gazebo.launch
waver_ws/src/waver_viz/: CMakeLists.txt  package.xml
waver_ws/src/waver_viz/launch/: rviz.launch
