<?xml version="1.0"?>
<package format="2">
  <name>waver_gazebo</name>
  <version>1.0.0</version>
  <description>The waver_gazebo package</description>

  <author email="gugomog3@gmail.com">Gustavo Gomez</author>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>waver_control</exec_depend> -->
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <exec_depend>waver_description</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

</package>
