<?xml version="1.0"?>
<package format="2">
  <name>waver_nav</name>
  <version>1.0.0</version>
  <description>The waver_nav package</description>

  <author email="gugomog3@gmail.com">Gustavo Gomez</author>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

</package>
