<?xml version="1.0"?>
<package format="2">
  <name>waver_viz</name>
  <version>1.0.0</version>
  <description>The waver_viz package</description>

  <author email="gugomog3@gmail.com">Gustavo Gomez</author>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>waver_description</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
